# WizzMania

./: .gitignore  CMakeLists.txt  README.md
WizzMania_like_qt/: CMakeLists.txt
client/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
client/include/: MainWindow.hpp
client/src/: MainWindow.cpp  MainWindow.ui  main.cpp
console_client/: CMakeLists.txt
console_client/include/: HttpClient.hpp
console_client/src/: HttpClient.cpp  main_console.cpp
server/: CMakeLists.txt  database.cpp  database.hpp  main.cpp  routes.cpp  routes.hpp
src/common/: Message.cpp  Message.hpp  Protocol.cpp  Protocol.hpp
src/common/http_server/: storage.cpp  storage.hpp
tests/: log.html  output.xml  report.html  test_api.robot
